--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.32.1",
     "sass": "^1.41.1"
   },
   "devDependencies": {
