--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@netlify/plugin-nextjs": "4",
     "gsap": "^3.7.1",
     "next": "^14.1.4",
     "react": "^18.2.0",
