--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@netlify/plugin-nextjs": "4",
+    "@next/bundle-analyzer": "^14.1.4",
     "next": "^14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
